submissions/superman/error-output.txt
submissions/superman/problem4.cpp: In function 'int main()':
submissions/superman/problem4.cpp:23:12: error: 'magic' was not declared in this scope
   p=magic(z);
            ^
'submissions\superman\problem4.exe' is not recognized as an internal or external command,
operable program or batch file.
